--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
 									</header>
 									<ul>
 										<li><a href="index.html">홈페이지</a></li>
-										<li><a href="generic.html">이벤트!</a></li>
+										<li><a href="generic.php">이벤트!</a></li>
 										<li><a href="elements.html">무료 교육</a></li>
 										<li>
 											<span class="opener">세미나</span>
